--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.488.0",
+    "net": "^1.0.2",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
