--- a/package.json
+++ b/package.json
@@ -11,30 +11,42 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tabler/icons-react": "^3.31.0",
     "@vapi-ai/web": "^2.3.0",
     "ai": "^4.3.15",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "framer-motion": "^12.11.4",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.488.0",
+    "mammoth": "^1.9.0",
+    "motion": "^12.12.0",
     "net": "^1.0.2",
     "next": "15.3.1",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.3",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
