--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
+    "youtube-transcript": "^1.2.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
